basic.css
.centered
{
 text-align: center;
}
.large
{
 font-size: large;
}
.medium
{
 font-size: medium;
}
.small
{
 font-size: small;
}
.bold
{
	font-weight: bold;
}
.toupper
{
	text-transform: uppercase;
}
.navitem
{
	display: inline-block;
	text-align: center;
	font-size: 16px;
	line-height: 1.5em;
	font-family: proxima-nova, Times New Roman;
    font-weight: 400;
    font-style: normal;
    text-transform: uppercase;
    letter-spacing: 2px;
	margin: 0 auto 0px;
	margin-top: auto;
	margin-right: 10px;
	margin-bottom: auto;
	margin-left: 10px;
	text-decoration: none;
	color: beige;
	
}	
.navblock
{
	width: auto;
    text-align: center;
    border-bottom: 1px solid rgba(224,224,224,0);
    border-top: 1px solid rgba(224,224,224,0);
    margin: 0;
    padding: 28px 0;
}
.body
{
	color: rgb(196, 191, 181);
	font-size: 15px;
	font-family: proxima-nova, Arial Narrow;
	font-weight: lighter;
	text-align: center;
	margin: 5px;
}
.pagetitle
{
	text-align: center;
	color: beige;
	display: block;
	text-transform: uppercase;
	font-family: proxima-nova, Arial Narrow;
	font-size: 50px;
	font-weight: 900;
	margin: 0 auto 28px;
		margin-top: 28px;
		margin-right: auto;
		margin-bottom: 5px;
		margin-left: auto;
}
.subheader
{
	text-align: center;
	color: beige;
	display: inline-block;
	text-transform: uppercase;
	font-family: proxima-nova, Arial Narrow;
	font-size: 25px;
	font-weight: light;
	margin: 0 auto 28px;
	margin-top: 0px;
	margin-right: auto;
	margin-bottom: 5px;
	margin-left: auto;
}
.aboutme
{
	white-space: pre-wrap;
	word-wrap: break-word;
	font-family: proxima-nova, Times New Roman;
	color:rgb(216, 216, 218);
	font-weight: 400;
	font-size: 18px;
	font-style: normal;
	text-align: left;
	height: auto;
	width: auto;
	margin: 0;
	line-height: 1.7em;
	display: inline-flex;
}
.homepageimgdef
{
	max-width: 500px;
	height: 500px;
	border-radius: 50%;
	float: left;

}
.linkicons
{
	display: inline-block;
    margin: 10px 10px;
    overflow: hidden;
    height: 80px;
    width: 80px;
}
.iconnavbox
{
	display: inline-flex;
	width: auto;
    margin: 0;
    padding: 28px 0;
	float: left;
}
.video
{
	width: 500px;
	height: 300px;
	float: left;
}
.descriptionhead
{
	display: flex;
	text-align: center;
	color: beige;
	font-family: proxima-nova, Arial Narrow;
	font-size: 25px;
	font-weight: light;
	margin: 0 auto 28px;
	margin-top: 20px;
	margin-right: auto;
	margin-bottom: 5px;
	margin-left: auto;
}
.projectblock
{
	display: inline-block;
	text-align: center;
	margin: 10px;
}
.projectinfo
{
	white-space: pre-wrap;
	word-wrap: break-word;
	font-family: proxima-nova, Times New Roman;
	color:	rgb(243, 243, 243);
	font-weight: 400;
	font-size: 18px;
	font-style: normal;
	text-align: left;
	height: auto;
	width: auto;
	margin: 50px;
	line-height: 1.7em;
	display: inline-flex;
}
.projectgit
{
	display: inline-block;
    margin: -20px;
    overflow: hidden;
    height: 40px;
    width: 40x;
}
.otherprojects
{
	text-align: center;
	color: beige;
	text-transform: uppercase;
	font-family: proxima-nova, Arial Narrow;
	font-size: 25px;
	font-weight: light;
	margin: 0 auto 28px;
	margin-top: 100px;
	margin-right: auto;
	margin-bottom: 5px;
	margin-left: auto;
}
.jobtitle
{
	text-align: center;
	color: beige;
	font-family: proxima-nova, Arial Narrow;
	font-size: 30px;
	font-weight: light;
}
.workplace
{
	text-align: center;
	color: beige;
	font-family: proxima-nova, Arial Narrow;
	font-size: 20px;
	font-weight: lighter;
}
.jobinfo
{
	color: rgb(243, 243, 243);
	font-family: proxima-nova, Times New Roman;
	font-size: 16px;
	font-weight: light;
	margin-left: 240px;
	margin-right: 240px;
}
.seperate
{
	border-bottom: 2px solid beige;
	margin-top: 10px;
	margin-bottom: 100px;
	margin-left: 200px;
	margin-right: 200px;
}

.langs
{
	color: rgb(243, 243, 243);
	font-family: proxima-nova, Times New Roman;
	font-size: 16px;
	font-weight: light;
	text-align: center;
	margin-left: 500px;
	list-style: none;
	line-height: 30px;
}
.skills
{
	color: rgb(243, 243, 243);
	font-family: proxima-nova, Times New Roman;
	font-size: 16px;
	font-weight: light;
	text-align: center;
	margin-left: 450px;
	list-style: none;
	line-height: 30px;
}

